backend/compile_errors.txt
> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileTestJava
C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\CustomerControllerUnitTest.java:37: error: incompatible types: List<CustomerResponse> cannot be converted to CustomerResponse
        CustomerResponse body = result.getBody();
                                              ^
C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\CustomerControllerUnitTest.java:39: error: cannot find symbol
        assertEquals(1, body.size());
                            ^
  symbol:   method size()
  location: variable body of type CustomerResponse
2 errors

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/enri3/OneDrive/Desktop/Projectos/Cyrcetech/backend/build/reports/problems/problems-report.html
3 actionable tasks: 1 executed, 2 up-to-date

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\CustomerControllerUnitTest.java:37: error: incompatible types: List<CustomerResponse> cannot be converted to CustomerResponse
          CustomerResponse body = result.getBody();
                                                ^
  C:\Users\enri3\OneDrive\Desktop\Projectos\Cyrcetech\backend\src\test\java\com\cyrcetech\backend\controller\CustomerControllerUnitTest.java:39: error: cannot find symbol
          assertEquals(1, body.size());
                              ^
    symbol:   method size()
    location: variable body of type CustomerResponse
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 36s
